<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFood"
    tools:ignore="TextFields,MissingConstraints,RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="26dp"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/edt_food_name"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/add_food"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_background"
        android:hint="@string/taom_nomi"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/edt_food_products"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_food_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_background"
        android:gravity="start"
        android:hint="@string/kerakli_maxsulotlar"
        android:importantForAutofill="no"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/edt_preparation_order"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_name" />

    <EditText
        android:id="@+id/edt_preparation_order"
        android:layout_width="match_parent"
        android:layout_height="0.dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="no"
        android:background="@drawable/edit_background"
        android:gravity="start"
        android:hint="@string/taom_tayyorlanish_tartibi"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_products" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_preparation_order"
        app:layout_constraintWidth_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>